--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "frank-heath",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,10 +443,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "developing-optimum",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house with address El Escorial is the most expensive and its price is 8500000 USD\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO"
    ]
@@ -956,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
