--- a/project.ipynb
+++ b/project.ipynb
@@ -892,113 +892,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "developing-optimum",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>id_realEstates</th>\n",
-       "      <th>isNew</th>\n",
-       "      <th>realEstate_name</th>\n",
-       "      <th>phone_realEstate</th>\n",
-       "      <th>url_inmueble</th>\n",
-       "      <th>rooms</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>surface</th>\n",
-       "      <th>price</th>\n",
-       "      <th>...</th>\n",
-       "      <th>level4Id</th>\n",
-       "      <th>level5Id</th>\n",
-       "      <th>level6Id</th>\n",
-       "      <th>level7Id</th>\n",
-       "      <th>level8Id</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>zipCode</th>\n",
-       "      <th>customZone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13110</th>\n",
-       "      <td>13111</td>\n",
-       "      <td>132042636</td>\n",
-       "      <td>False</td>\n",
-       "      <td>engel volkers torrelodones</td>\n",
-       "      <td>911798512.0</td>\n",
-       "      <td>https://www.fotocasa.es/es/comprar/vivienda/vi...</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8500000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40,5830801751782</td>\n",
-       "      <td>-4,12951942848611</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 37 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0  id_realEstates  isNew             realEstate_name  \\\n",
-       "13110       13111       132042636  False  engel volkers torrelodones   \n",
-       "\n",
-       "       phone_realEstate                                       url_inmueble  \\\n",
-       "13110       911798512.0  https://www.fotocasa.es/es/comprar/vivienda/vi...   \n",
-       "\n",
-       "       rooms  bathrooms  surface    price  ... level4Id level5Id level6Id  \\\n",
-       "13110   19.0        NaN      NaN  8500000  ...        0        0        0   \n",
-       "\n",
-       "      level7Id level8Id accuracy          latitude          longitude zipCode  \\\n",
-       "13110        0        0        0  40,5830801751782  -4,12951942848611     NaN   \n",
-       "\n",
-       "      customZone  \n",
-       "13110        NaN  \n",
-       "\n",
-       "[1 rows x 37 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house with address El Escorial is the most expensive and its price is 8500000 USD\n"
+     ]
     }
    ],
    "source": [
-    "ds = ds.sort_values(by = ['price'], ascending = False)\n",
+    "ds.sort_values(by = ['price'], ascending = False, inplace = True)\n",
     "\n",
     "expensive_house = ds.head(1)\n",
-    "expensive_house"
+    "\n",
+    "print(f\"The house with address {expensive_house['address'].values[0]} is the most expensive and its price is {expensive_house['price'].values[0]} USD\")"
    ]
   },
   {
@@ -1020,9 +931,7 @@
    "id": "lovely-oasis",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   },
   {
    "attachments": {},
