Modificado el datase, modificado ejercicio #1 y #2

--- a/project.ipynb
+++ b/project.ipynb
@@ -927,11 +927,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "lovely-oasis",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house with address Berlin, Coslada is the cheapest and its price is 600 USD\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_ds = ds.loc[ds['price'] != 0]\n",
+    "cheap_house = new_ds.tail(1)\n",
+    "print(f\"The house with address {cheap_house['address'].values[0]} is the cheapest and its price is {cheap_house.price.values[0]} USD\")"
+   ]
   },
   {
    "attachments": {},
@@ -950,12 +962,436 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "every-tiffany",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_realEstates</th>\n",
+       "      <th>isNew</th>\n",
+       "      <th>realEstate_name</th>\n",
+       "      <th>phone_realEstate</th>\n",
+       "      <th>url_inmueble</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>price</th>\n",
+       "      <th>date</th>\n",
+       "      <th>...</th>\n",
+       "      <th>level4Id</th>\n",
+       "      <th>level5Id</th>\n",
+       "      <th>level6Id</th>\n",
+       "      <th>level7Id</th>\n",
+       "      <th>level8Id</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>zipCode</th>\n",
+       "      <th>customZone</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>152817874</td>\n",
+       "      <td>False</td>\n",
+       "      <td>toledo21</td>\n",
+       "      <td>910757382.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>85000</td>\n",
+       "      <td>2019-12-28T19:04:44.6433814Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,40818</td>\n",
+       "      <td>-3,70192</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15321</th>\n",
+       "      <td>153901533</td>\n",
+       "      <td>False</td>\n",
+       "      <td>infocasa consulting</td>\n",
+       "      <td>911360461.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>89000</td>\n",
+       "      <td>2019-12-17T18:26:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,40733</td>\n",
+       "      <td>-3,69876</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14362</th>\n",
+       "      <td>153920125</td>\n",
+       "      <td>False</td>\n",
+       "      <td>infocasa consulting</td>\n",
+       "      <td>911360461.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/al...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>89000</td>\n",
+       "      <td>2019-12-18T17:11:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,40733</td>\n",
+       "      <td>-3,69876</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>153989797</td>\n",
+       "      <td>False</td>\n",
+       "      <td>vivienda2</td>\n",
+       "      <td>912188609.0</td>\n",
+       "      <td>https://www.fotocasa.es/vivienda/madrid-capita...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>169000</td>\n",
+       "      <td>2019-12-28T03:10:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,4002202213562</td>\n",
+       "      <td>-3,70302392135624</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9683</th>\n",
+       "      <td>153962563</td>\n",
+       "      <td>False</td>\n",
+       "      <td>haya real estate</td>\n",
+       "      <td>911227078.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/co...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>94000</td>\n",
+       "      <td>2019-12-23T04:56:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,42421257</td>\n",
+       "      <td>-3,66674429</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199</th>\n",
+       "      <td>142601805</td>\n",
+       "      <td>False</td>\n",
+       "      <td>sosdivar</td>\n",
+       "      <td>914890914.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/la...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5083.0</td>\n",
+       "      <td>825000</td>\n",
+       "      <td>2019-12-28T06:34:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,55249</td>\n",
+       "      <td>-3,98827</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8538</th>\n",
+       "      <td>142907825</td>\n",
+       "      <td>False</td>\n",
+       "      <td>remax jumbo</td>\n",
+       "      <td>910758029.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5504.0</td>\n",
+       "      <td>790000</td>\n",
+       "      <td>2019-12-23T17:25:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,98879</td>\n",
+       "      <td>-3,70811</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14853</th>\n",
+       "      <td>152249752</td>\n",
+       "      <td>False</td>\n",
+       "      <td>deplace</td>\n",
+       "      <td>910750918.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/la...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16853.0</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>2019-12-18T09:41:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,6912092</td>\n",
+       "      <td>-3,608836</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12677</th>\n",
+       "      <td>153942565</td>\n",
+       "      <td>False</td>\n",
+       "      <td>montse</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/al...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>66666.0</td>\n",
+       "      <td>389000</td>\n",
+       "      <td>2019-12-19T19:00:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,27977</td>\n",
+       "      <td>-3,92413</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6795</th>\n",
+       "      <td>153936192</td>\n",
+       "      <td>False</td>\n",
+       "      <td>habitarium inmobiliaria</td>\n",
+       "      <td>916357732.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>249000.0</td>\n",
+       "      <td>289000</td>\n",
+       "      <td>2019-12-25T18:30:00Z</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,34633</td>\n",
+       "      <td>-4,02174</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14085 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id_realEstates  isNew          realEstate_name  phone_realEstate  \\\n",
+       "Unnamed: 0                                                                     \n",
+       "499              152817874  False                 toledo21       910757382.0   \n",
+       "15321            153901533  False      infocasa consulting       911360461.0   \n",
+       "14362            153920125  False      infocasa consulting       911360461.0   \n",
+       "1889             153989797  False                vivienda2       912188609.0   \n",
+       "9683             153962563  False         haya real estate       911227078.0   \n",
+       "...                    ...    ...                      ...               ...   \n",
+       "1199             142601805  False                 sosdivar       914890914.0   \n",
+       "8538             142907825  False              remax jumbo       910758029.0   \n",
+       "14853            152249752  False                  deplace       910750918.0   \n",
+       "12677            153942565  False                   montse               NaN   \n",
+       "6795             153936192  False  habitarium inmobiliaria       916357732.0   \n",
+       "\n",
+       "                                                 url_inmueble  rooms  \\\n",
+       "Unnamed: 0                                                             \n",
+       "499         https://www.fotocasa.es/es/comprar/vivienda/ma...    1.0   \n",
+       "15321       https://www.fotocasa.es/es/comprar/vivienda/ma...    NaN   \n",
+       "14362       https://www.fotocasa.es/es/comprar/vivienda/al...    NaN   \n",
+       "1889        https://www.fotocasa.es/vivienda/madrid-capita...    NaN   \n",
+       "9683        https://www.fotocasa.es/es/comprar/vivienda/co...    1.0   \n",
+       "...                                                       ...    ...   \n",
+       "1199        https://www.fotocasa.es/es/comprar/vivienda/la...    6.0   \n",
+       "8538        https://www.fotocasa.es/es/comprar/vivienda/ma...   30.0   \n",
+       "14853       https://www.fotocasa.es/es/comprar/vivienda/la...    NaN   \n",
+       "12677       https://www.fotocasa.es/es/comprar/vivienda/al...    3.0   \n",
+       "6795        https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+       "\n",
+       "            bathrooms   surface   price                          date  ...  \\\n",
+       "Unnamed: 0                                                             ...   \n",
+       "499               1.0      15.0   85000  2019-12-28T19:04:44.6433814Z  ...   \n",
+       "15321             1.0      18.0   89000          2019-12-17T18:26:00Z  ...   \n",
+       "14362             1.0      18.0   89000          2019-12-18T17:11:00Z  ...   \n",
+       "1889              1.0      21.0  169000          2019-12-28T03:10:00Z  ...   \n",
+       "9683              1.0      21.0   94000          2019-12-23T04:56:00Z  ...   \n",
+       "...               ...       ...     ...                           ...  ...   \n",
+       "1199              3.0    5083.0  825000          2019-12-28T06:34:00Z  ...   \n",
+       "8538             20.0    5504.0  790000          2019-12-23T17:25:00Z  ...   \n",
+       "14853             NaN   16853.0   90000          2019-12-18T09:41:00Z  ...   \n",
+       "12677             3.0   66666.0  389000          2019-12-19T19:00:00Z  ...   \n",
+       "6795              2.0  249000.0  289000          2019-12-25T18:30:00Z  ...   \n",
+       "\n",
+       "           level4Id level5Id level6Id level7Id level8Id accuracy  \\\n",
+       "Unnamed: 0                                                         \n",
+       "499               0        0        0        0        0        0   \n",
+       "15321             0        0        0        0        0        0   \n",
+       "14362             0        0        0        0        0        0   \n",
+       "1889              0        0        0        0        0        0   \n",
+       "9683              0        0        0        0        0        0   \n",
+       "...             ...      ...      ...      ...      ...      ...   \n",
+       "1199              0        0        0        0        0        1   \n",
+       "8538              0        0        0        0        0        0   \n",
+       "14853             0        0        0        0        0        0   \n",
+       "12677             0        0        0        0        0        1   \n",
+       "6795              0        0        0        0        0        0   \n",
+       "\n",
+       "                    latitude          longitude zipCode customZone  \n",
+       "Unnamed: 0                                                          \n",
+       "499                 40,40818           -3,70192     NaN        NaN  \n",
+       "15321               40,40733           -3,69876     NaN        NaN  \n",
+       "14362               40,40733           -3,69876     NaN        NaN  \n",
+       "1889        40,4002202213562  -3,70302392135624     NaN        NaN  \n",
+       "9683             40,42421257        -3,66674429     NaN        NaN  \n",
+       "...                      ...                ...     ...        ...  \n",
+       "1199                40,55249           -3,98827     NaN        NaN  \n",
+       "8538                40,98879           -3,70811     NaN        NaN  \n",
+       "14853             40,6912092          -3,608836     NaN        NaN  \n",
+       "12677               40,27977           -3,92413     NaN        NaN  \n",
+       "6795                40,34633           -4,02174     NaN        NaN  \n",
+       "\n",
+       "[14085 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "new_ds = ds.dropna(subset = ['surface']).sort_values(by = ['surface'])\n",
+    "new_ds\n",
+    "\n",
+    "# smallets_house = new_ds.head(1)\n",
+    "# biggest_house = new_ds.tail(1)\n",
+    "\n",
+    "# print(f\"The biggest house is located on {biggest_house['address'].values[0]} and its surface is {biggest_house['surface'].values[0]} meters\")\n",
+    "# print(f\"The smallest house is located on {smallets_house['address'].values[0]} and its surface is {smallets_house['surface'].values[0]} meters\")"
    ]
   },
   {
