--- a/project.ipynb
+++ b/project.ipynb
@@ -2428,26 +2428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 439,
    "id": "present-mistress",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57c3c12255ff4e3898ea24cf0110d404",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(bottom=395919.00074708194, center=[40.32796363768658, -3.629264831542969], controls=(ZoomControl(options=[…"
-      ]
-     },
-     "execution_count": 435,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Leganes\n",
     "# Modificamos el tipo de dato de latitude\n",
@@ -2504,26 +2488,42 @@
     "getafe.loc[:, 'longitude'] = getafe['longitude'].apply(lambda x: float(x.replace(',', '.')) if isinstance(x, str) else x)\n",
     "\n",
     "# coordenadas de getafe\n",
-    "coordenadas_a = list(zip(getafe['latitude'], getafe['longitude']))\n",
+    "coordenadas_g = list(zip(getafe['latitude'], getafe['longitude']))\n",
     "\n",
     "# icono getafe\n",
-    "icon_a = AwesomeIcon(marker_color = 'blue', icon_color = 'black')\n",
+    "icon_g = AwesomeIcon(marker_color = 'purple', icon_color = 'black')\n",
     "\n",
-    "for i in coordenadas_a:\n",
-    "  map.add(Marker(location = i, draggable = False, icon = icon_a))\n",
+    "for i in coordenadas_g:\n",
+    "  map.add(Marker(location = i, draggable = False, icon = icon_g))\n",
     "\n",
-    "map"
+    "# map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 438,
    "id": "27ea309f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57c3c12255ff4e3898ea24cf0110d404",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(bottom=395919.0, center=[40.32796363768658, -3.629264831542969], controls=(ZoomControl(options=['position'…"
+      ]
+     },
+     "execution_count": 438,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Se llama el mapa\n",
-    "# map"
+    "map"
    ]
   }
  ],
